.description overflow is corrected

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ main{
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    padding: 4em 15em;
+    /* padding: 4em 15em; */
 
 }
 
@@ -139,16 +139,19 @@ main{
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    padding: 4em 15em;
+    /* padding: 4em 15em; */
 }
 
 .transform,
 .standOut{
+    height: 726px;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
-    padding: 11em;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* padding: 11em; */
 }
 
 .transform .Head,
@@ -173,7 +176,7 @@ main{
     font-family: 'Barlow', sans-serif;
     font-size: 1rem;
     line-height: 1.6em;
-    margin-bottom: 1.75em;
+    margin: 0em 1.75em 1.75em 1.75em;
     color: hsl(213, 9%, 39%);
 }
 
@@ -182,7 +185,7 @@ main{
     font-family: 'Barlow', sans-serif;
     font-size: 1rem;
     line-height: 1.6em;
-    margin-bottom: 1.75em;
+    margin: 0em 1.75em 11em 1.75em;
     text-align: center;
 }
 
